--- a/package.json
+++ b/package.json
@@ -10,28 +10,62 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-native": "0.79.2"
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
+    "@react-native-firebase/firestore": "^21.14.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-native-ml-kit/text-recognition": "^1.5.2",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.6.8",
+    "react": "^19.0.0",
+    "react-native": "^0.79.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-google-button": "^0.1.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-opencv": "^0.0.0",
+    "react-native-paper": "^5.13.4",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screen": "^1.0.1",
+    "react-native-screens": "^4.10.0",
+    "react-native-sensors": "^7.3.6",
+    "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.13.0",
+    "react-native-vision-camera": "^4.6.4",
+    "react-native-webview": "^13.13.5",
+    "react-vision-camera": "^1.0.1",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.2",
-    "@react-native/eslint-config": "0.79.2",
-    "@react-native/metro-config": "0.79.2",
-    "@react-native/typescript-config": "0.79.2",
+    "@babel/runtime": "^7.27.0",
+    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli-platform-android": "^18.0.0",
+    "@react-native-community/cli-platform-ios": "^18.0.0",
+    "@react-native/babel-preset": "^0.79.1",
+    "@react-native/eslint-config": "^0.79.1",
+    "@react-native/metro-config": "^0.79.1",
+    "@react-native/typescript-config": "^0.79.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "prettier": "^2.8.8",
+    "react-test-renderer": "^19.0.0",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
