--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.4.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/firestore": "^21.14.0",
+    "@react-native-firebase/storage": "^22.2.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-ml-kit/text-recognition": "^1.5.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@stripe/stripe-react-native": "^0.46.0",
     "@types/react-native-vector-icons": "^6.4.18",
-    "axios": "^1.6.8",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-native": "^0.79.1",
     "react-native-chart-kit": "^6.12.0",
