--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@stripe/stripe-react-native": "^0.46.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.9.0",
+    "country-data": "^0.0.31",
+    "currency-symbol-map": "^5.1.0",
     "react": "^19.0.0",
     "react-native": "^0.79.1",
     "react-native-chart-kit": "^6.12.0",
