--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "currency-symbol-map": "^5.1.0",
     "react": "^19.0.0",
     "react-native": "^0.79.1",
+    "react-native-calendars": "^1.1295.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.25.0",
